--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
 		"vitest": "^0.32.2",
 		"vitest-dom": "^0.1.1"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-french-toast": "1.2.0"
+	}
 }
